--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,9 @@
     font-size: 125px;
     font-family: Arial, Helvetica, sans-serif;
   }
+  & p {
+    text-align: center;
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
 }
