--- a/src/app/animations-demo/animation-demo.component.scss
+++ b/src/app/animations-demo/animation-demo.component.scss
@@ -44,16 +44,16 @@ $bar-bg: rgba(0, 0, 0, 0.075);
   }
 
   20% {
-    width: 75%;
+    width: 85%;
   }
 
   25% {
-    width: 100%;
+    width: 99%;
   }
 }
 
 // bar
-.progress-bar {
+.progress-loader {
   border-radius: $bar-radius;
   overflow: hidden;
   width: 100%;
